# mapepire-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PR-98-REVIEW-REPORT.md  README.md  RELEASE_PROCESS.md  TODO.md  demo.py  environment-dev.yml  error_discovery.py  iproj.json  pyproject.toml  requirements-dev.txt  test.ipynb  test_enhanced_errors.py  test_enhanced_errors_live.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: changelog.yml  main.yml  pr_checks.yml  pr_run_tests.yml
docs/source/: conf.py  index.md  installation.md  parameter_handling.md
examples/: simple-example.ipynb
local/: hello_test.py
mapepire_python/: __init__.py  async_base_job.py  base_job.py  base_query.py  connection_pool.py  data_types.py  pool.py  query_executor.py  query_manager.py  ssl.py  ssl_cache.py  types.py  websocket.py
mapepire_python/asyncio/: __init__.py  connection.py  cursor.py  utils.py
mapepire_python/authentication/: kerberosTokenProvider.py
mapepire_python/client/: __init__.py  async_sql_job.py  query.py  query_manager.py  sql_job.py  websocket.py  websocket_client.py
mapepire_python/core/: __init__.py  connection.py  correlation_handler.py  cursor.py  exceptions.py  metadata_processor.py  parameter_parser.py  pep249_adapter.py  query_base.py  query_factory.py  result_processor.py  utils.py
mapepire_python/pool/: __init__.py  async_websocket_client.py  optimized_pool_client.py  pool.py  pool_client.py  pool_job.py  pool_query.py  temp_pool.py
python_sc/: sql_job.py  sql_runner.py  tls.py  types.py
python_sc/client/: query.py  sql_job.py
python_wsdb/: __init__.py  pool.py  ssl.py  tls.py  types.py
python_wsdb/client/: query.py  sql_job.py
scripts/: format.sh  personalize.py  prepare_changelog.py  release.sh
tests/: QUICK_PERFORMANCE_GUIDE.md  async_pool_test.py  cl_test.py  config_ini_test.py  conftest.py  cool_test.py  hello_test.py  pep249_async_test.py  pep249_test.py  pool_test.py  pooling_test.py  pytest.ini.sample  query_manager_test.py  run_pool_performance.py  run_pool_performance_simple.py  simple_test.py  sql_job_context_test.py  sql_test.py  test.py  test_advanced_edge_cases.py  test_cursor_pep249.py  test_data_types.py  test_setup.py  test_unified_architecture.py  tls_test.py
tests/asyncio/: test_async_connections.py  test_async_corner_cases.py
tests/client/: test_basic_operations.py  test_cl_commands.py  test_sql_comprehensive.py  test_sql_job.py
tests/core/: test_connection.py  test_core_corner_cases.py  test_cursor.py
tests/integration/: cl_test.py  pep249_test.py  pytest.ini.sample  simple_test.py  test_parameter_handling_ibmi.py
tests/pep249/: test_compliance.py  test_pep249_corner_cases.py
tests/performance/: test_connection_pool_ibmi.py  test_connection_pool_optimizations.py  test_websocket_connection_reuse_poc.py
tests/pool/: README.md  TESTS_OVERVIEW.md  test_optimized_pool.py  test_pool_basic_performance.py  test_pool_client.py  test_pool_job.py  test_pool_performance_comparison.py
tests/security/: test_ssl_cache.py  test_ssl_cache_performance.py  test_tls.py
tests/unit/: test_config_parsing.py  test_connection.py  test_cursor.py  test_error_classification.py  test_parameter_parser.py  test_pool_query.py  test_pool_scaling.py  test_query_state.py  test_ssl.py
tests/utils/: test_query_manager.py
