[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "mapepire-python"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Adam Shedivy", email = "adam.shedivy@ibm.com"},
    {name = "Irfan Sharif", email = "IrfanSharif@ibm.com"}
]
requires-python = ">=3.10"
dependencies = [
  "dataclasses-json>=0.6.4",
  "websockets>=14.0",
  "pep249abc"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Mapepire-IBMi/mapepire-python"
Repository = "https://github.com/Mapepire-IBMi/mapepire-python  "
Changelog = "https://github.com/Mapepire-IBMi/mapepire-python/blob/main/CHANGELOG.md"
Documentation = "https://mapepire-ibmi.github.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.20",
    "black>=24.3.0,<27.0",
    "isort>=5.12,<6.2",
    "pytest>=9.0.3",
    "pep249abc",
    "pytest-asyncio",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "packaging",
    "pre-commit",
    "python-dotenv",
    "pytest-env",
    "gssapi",
    'pywin32; sys_platform == "win32"'
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mapepire_python = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "mapepire_python.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
exclude="(tests/)"

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
asyncio_mode = "auto"
env_files = [".env"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
